[package]
name = "kd_optimization"
version = "0.1.0"
authors = ["Nestor Demeure <nestor@nestor-HP-ProBook-650-G1>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
rand_xoshiro = "0.1.0"
argmin_testfunctions = "0.1.1"
statrs = "0.11.0"
